# indikator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  bench_intraday_indicators.py  bench_optimizations.py  bench_rolling_indicators.py  bench_slope.py  run_all.py  run_final_benchmarks.py
docs/: index.html  indikator.html  search.js
docs/indikator/: adx.html  atr.html  cci.html  churn_factor.html  ema.html  macd.html  mfi.html  obv.html  opening_range.html  roc.html  rsi.html  rvol.html  sector_correlation.html  slope.html  sma.html  stoch.html  vwap.html  willr.html  zscore.html
notebooks/: README.md  atr_visualization.ipynb  bollinger_visualization.ipynb  churn_factor_visualization.ipynb  macd_visualization.ipynb  mfi_visualization.ipynb  obv_visualization.ipynb  opening_range_visualization.ipynb  pivots_visualization.ipynb  rsi_visualization.ipynb  rvol_intraday_visualization.ipynb  rvol_visualization.ipynb  sector_correlation_visualization.ipynb  slope_visualization.ipynb  vwap_visualization.ipynb  zigzag_visualization.ipynb  zscore_visualization.ipynb
scripts/: check_talib_match.py
src/indikator/: __init__.py  _ad_numba.py  _adx_numba.py  _aroon_numba.py  _atr_numba.py  _atr_numba.pyi  _bollinger_numba.py  _bollinger_talib.py  _bop_numba.py  _cci_numba.py  _cdl_numba.py  _cmo_numba.py  _constants.py  _correlation_numba.py  _cycle_numba.py  _dema_numba.py  _deque_numba.py  _ema_numba.py  _intraday.py  _kama_numba.py  _legs_numba.py  _legs_numba.pyi  _macd_numba.py  _macd_numba.pyi  _mavp_numba.py  _mesa_numba.py  _mfi_numba.py  _mfi_numba.pyi  _mom_numba.py  _momentum_numba.py  _natr_numba.py  _obv_numba.py  _obv_numba.pyi  _price_transform_numba.py  _results.py  _roc_numba.py  _rolling_numba.py  _rsi_numba.py  _rsi_numba.pyi  _sar_numba.py  (+136 more)
src/indikator/numba/: ad.py  adx.py  aroon.py  atr.py  bollinger.py  bollinger_talib.py  bop.py  cdl.py  correlation.py  cycle.py  dema.py  deque.py  ema.py  intraday.py  kama.py  legs.py  macd.py  math_transform.py  mavp.py  mesa.py  mom.py  momentum.py  natr.py  obv.py  price_transform.py  roc.py  rolling.py  rsi.py  sar.py  slope.py  sma.py  stats.py  stoch.py  stochrsi.py  t3.py  tema.py  trima.py  trix.py  ultosc.py  vwap.py  (+2 more)
tests/: README.md  __init__.py  conftest.py  test_ad.py  test_adosc.py  test_adx.py  test_apo_ppo.py  test_aroon.py  test_atr.py  test_beta_correl.py  test_bollinger.py  test_bop.py  test_cci.py  test_cdl.py  test_churn_factor.py  test_cmo.py  test_config_validation.py  test_coverage_gaps.py  test_cycle.py  test_dema.py  test_ema.py  test_fuzzing.py  test_kama.py  test_legs.py  test_legs_additional.py  test_legs_basic.py  test_legs_confirmation.py  test_legs_edge_cases.py  test_legs_structure.py  test_linearreg.py  test_macd.py  test_math_transform.py  test_mavp.py  test_mfi.py  test_midpoint.py  test_midprice.py  test_minmax.py  test_minmax_math.py  test_mom.py  test_momentum_adv.py  (+29 more)
